--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,8 +5,8 @@
         </title>
     </head>
     <body>
-        <header>Page Header</header>
+        <%- include('_header.ejs'); %>
         <h1>Home Page</h1>
-        <footer>Page Footer</footer>
+        <%- include('_footer.ejs'); %>
     </body>
 </html>
