--- a/views/user.ejs
+++ b/views/user.ejs
@@ -3,12 +3,8 @@
         <title> <%= title %></title>
     </head>
     <body>
-        <header>
-            Page header
-        </header>
+        <%- include('_header.ejs'); %>
         <h1>User's Profile</h1>
-        <footer>
-            Page footer
-        </footer>
+        <%- include('_footer.ejs'); %>
     </body>
 </html>
