--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,12 +1,12 @@
-<html>
+<!-- <html>
     <head>
         <title>
             <%= title %>
         </title>
     </head>
     <body>
-        <%- include('_header.ejs'); %>
+        <%- include('_header.ejs'); %> -->
         <h1>Home Page</h1>
-        <%- include('_footer.ejs'); %>
+        <!-- <%- include('_footer.ejs'); %>
     </body>
-</html>
+</html> -->
