--- a/views/user.ejs
+++ b/views/user.ejs
@@ -1,10 +1,10 @@
-<html>
+<!-- <html>
     <head>
         <title> <%= title %></title>
     </head>
     <body>
-        <%- include('_header.ejs'); %>
+        <%- include('_header.ejs'); %> -->
         <h1>User's Profile</h1>
-        <%- include('_footer.ejs'); %>
+        <!-- <%- include('_footer.ejs'); %>
     </body>
-</html>
+</html> -->
