--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,6 +3,7 @@
         <title>
             <%= title %>
         </title>
+        <link rel="stylesheet" href="/css/home.css">
     </head>
     <body>
         <%- include('_header.ejs'); %>
