--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,11 +3,14 @@
         <title>
             <%= title %>
         </title>
-        <link rel="stylesheet" href="/css/home.css">
+        <link rel="stylesheet" href="/css/layout.css">
+        <%- style %>
     </head>
     <body>
         <%- include('_header.ejs'); %>
         <%- body %>
         <%- include('_footer.ejs'); %>
+
+        <%- script%>
     </body>
 </html>
