--- a/views/user.ejs
+++ b/views/user.ejs
@@ -4,6 +4,7 @@
     </head>
     <body>
         <%- include('_header.ejs'); %> -->
+        <link rel="stylesheet" href="/css/user.css">
         <h1>User's Profile</h1>
         <!-- <%- include('_footer.ejs'); %>
     </body>
