--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,6 +6,7 @@
     </head>
     <body>
         <%- include('_header.ejs'); %> -->
+        <link rel="stylesheet" href="/css/home.css">
         <h1>Home Page</h1>
         <!-- <%- include('_footer.ejs'); %>
     </body>
