--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,8 +5,8 @@
         </title>
     </head>
     <body>
-        <form action="log-in" method="post">
-            <p>Email-id &nbsp;<input type="text" name="email" id="" required></p>
+        <form action="/users/create-session" method="post">
+            <p>Email-id &nbsp;<input type="email" name="email" id="" required></p>
             <p>Password &nbsp;<input type="password" name="password" id="" required></p>
             <button type="submit">Log-in</button>
         </form>
