--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -5,9 +5,9 @@
         </title>
     </head>
     <body>
-        <form action="sign-up" method="post">
+        <form action="/user/create" method="post">
             <p>Name &nbsp; <input type="text" name="name" id="" required></p>
-            <p>Email-id &nbsp;<input type="text" name="email" id="" required></p>
+            <p>Email-id &nbsp;<input type="email" name="email" id="" required></p>
             <p>Password &nbsp;<input type="password" name="password" id="" required></p>
             <button type="submit">Sign-up</button>
         </form>
