Sign-in Functionality

--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -6,9 +6,10 @@
     </head>
     <body>
         <form action="/user/create" method="post">
-            <p>Name &nbsp; <input type="text" name="name" id="" required></p>
-            <p>Email-id &nbsp;<input type="email" name="email" id="" required></p>
-            <p>Password &nbsp;<input type="password" name="password" id="" required></p>
+            <p><input type="text" name="name" id="" required placeholder="Name"></p>
+            <p><input type="email" name="email" id="" required placeholder="email-id"></p>
+            <p><input type="password" name="password" id="" required placeholder="password"></p>
+            <p><input type="password" name="confirm_password" id="" required placeholder="confirm password"></p>
             <button type="submit">Sign-up</button>
         </form>
     </body>
