--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,7 +5,7 @@
         </title>
     </head>
     <body>
-        <form action="/users/create-session" method="post">
+        <form action="/user/create-session" method="post">
             <p>Email-id &nbsp;<input type="email" name="email" id="" required></p>
             <p>Password &nbsp;<input type="password" name="password" id="" required></p>
             <button type="submit">Log-in</button>
