Redirecting if authenticated

--- a/views/user.ejs
+++ b/views/user.ejs
@@ -6,6 +6,8 @@
         <%- include('_header.ejs'); %> -->
         <link rel="stylesheet" href="/css/user.css">
         <h1>User's Profile</h1>
+        <p>My Email:<%= user.email %></p>
+        <p>My Name: <%= user.name %></p>
         <!-- <%- include('_footer.ejs'); %>
     </body>
 </html> -->
