--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -1,3 +1,20 @@
 <header>
     Page header
+
+    <ul>
+        <% if (locals.user){ %>
+
+            <a href="/user/profile"><li><%= user.name %></li></a>
+            <li><a href="/user/logout"><button>sign-out</button></a></li>
+            
+            
+            <%}else{%>
+
+                <li><a href="/user/sign-up">Sign-up</a></li>
+                <li><a href="/user/log-in">Log-in</a></li>
+
+                <%}%>
+    </ul>
+
+   
 </header>
