--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -1,1 +1,7 @@
-<footer>Page Footer</footer>
+<footer>
+    <p id="footing">Page Footer</p>
+    <span id="links">
+    <p><a href="/user/home">Home</a></p>
+    <p><a href="/user/profile">Profile</a></p>
+    </span>
+</footer>
