--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -10,7 +10,9 @@
     </head>
     <body>
         <%- include('_header.ejs'); %>
+        <main id="body-main">
         <%- body %>
+        </main>
         <%- include('_footer.ejs'); %>
 
         <%- script%>
