--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -1,5 +1,6 @@
 footer {
-  background-color: darkgrey;
+  /* background-color: darkgrey; */
+  background-color: #E54E4C;
   height: 3rem;
   text-align: left;
 }
