--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,3 +1,10 @@
 body {
+  background-color: darkgrey;
   color: black;
+}
+
+#posted-content {
+  text-align: left;
+  position: absolute;
+  left: 15px;
 }
