--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -1,4 +1,10 @@
 body{
-    background-color: #E54E4C;
+    background-color: darkgrey;
     color: black;
+}
+
+#posted-content{
+    text-align: left;
+    position: absolute;
+    left : 15px;
 }
