--- a/views/home.ejs
+++ b/views/home.ejs
@@ -10,7 +10,7 @@
         <h1>Home Page</h1>
 
         <section id="posted-content">
-            <form action="/user/createPost" method="post">
+            <form action="/posts/create" method="post">
             <textarea name="content" id="" cols="30" rows="4" placeholder="Type here..."></textarea>
             <input type="submit" value="Post">
             </form>
