--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,12 +8,16 @@
         <%- include('_header.ejs'); %> -->
         <link rel="stylesheet" href="/css/home.css">
         <h1>Home Page</h1>
-
         <section id="posted-content">
+            <div>
+                <% if (locals.user){ %>
             <form action="/posts/create" method="post">
             <textarea name="content" id="" cols="30" rows="4" placeholder="Type here..."></textarea>
             <input type="submit" value="Post">
             </form>
+            <% } %>
+            </div>
+        
 
             <div>
                 
