--- a/views/home.ejs
+++ b/views/home.ejs
@@ -23,8 +23,37 @@
                 
                 <ul>
                     <% for (post of posts) { %>
-                        <li><h2><%= post.user.name %></h2>
+                        <li><h4><%= post.user.name %></h4>
                             <p><%= post.content %></p>
+        
+                          <div>
+                              <% if (locals.user) { %>
+                                <form action="/comments/create" method="POST">
+                                    <input type="text" name="content" placeholder="Type Here to add comment..." required>
+                                    <input type="hidden" name="post" value="<%= post._id %>" >
+                                    <input type="submit" value="Add Comment">
+                                </form>
+                              <% } %>
+
+                              <div class="post-comments">
+                                  <% for (comment of post.comments){ %>
+                                    <p>
+                                        <%= comment.content %>
+                                        <br>
+                                        <small>
+                                            <%= post.user.name %>
+                                        </small>
+                                    </p>
+                                    <% } %>
+                              </div>
+
+                          </div>
+
+
+                            <div>
+                                
+                            </div>
+
                         </li>
                         <% } %>
                 </ul>
