--- a/views/home.ejs
+++ b/views/home.ejs
@@ -23,42 +23,7 @@
                 
                 <ul>
                     <% for (post of posts) { %>
-                        <li>
-                            <p><%= post.content %></p>
-                            <br>
-                            <small><%= post.user.name %></small>
-                            <% if (locals.user && locals.user.id == post.user.id) { %>
-                            <p><a href="/posts/destroy/<%= post.id %>">Delete</a></p>
-                            <% } %>
-        
-                          <div>
-                              <% if (locals.user) { %>
-                                <form action="/comments/create" method="POST">
-                                    <input type="text" name="content" placeholder="Type Here to add comment..." required>
-                                    <input type="hidden" name="post" value="<%= post._id %>" >
-                                    <input type="submit" value="Add Comment">
-                                </form>
-                              <% } %>
-                              
-                              <div class="post-comments">
-                                <ul id="post-comments-<%= post._id %>">
-                                  <% for (comment of post.comments){ %>
-                                    <p style="display: block;"><%= comment.content %>
-                                        <br>
-                                        <small>
-                                            <%= comment.user.name %>
-                                        </small>
-                                        </p>
-                                        <% if (locals.user && locals.user.id == comment.user.id) { %>
-                                            <p><a href="/comments/destroy/<%= comment.id %>">Delete</a></p>
-                                            <% } %>
-                                    <% } %>
-                                </ul>
-                              </div>
-
-                          </div>
-
-                        </li>
+                        <%- include('_post') -%>
                         <% } %>
                 </ul>
                     
