--- a/views/user.ejs
+++ b/views/user.ejs
@@ -7,7 +7,19 @@
         <link rel="stylesheet" href="/css/user.css">
         <h1>User's Profile</h1>
         <p>My Email:<%= profile_user.email %></p>
-        <p>My Name: <%= profile_user.name %></p>
+            <p>My Name: <%= profile_user.name %></p>
+
+        <% if(user.id == profile_user.id) {%> 
+            <form action="/user/update/<%= profile_user.id %>" method="post">
+            <input type="text" name="name" placeholder="Enter Name" value="<%= profile_user.name %>" required>
+            <input type="email" name="email" placeholder="Enter Email" value="<%= profile_user.email %>" required>
+            <input type="submit" value="Update">
+            </form>
+
+        <% }else{ %>
+            <p>My Email:<%= profile_user.email %></p>
+            <p>My Name: <%= profile_user.name %></p>
+        <% } %>
         <!-- <%- include('_footer.ejs'); %>
     </body>
 </html> -->
