--- a/views/home.ejs
+++ b/views/home.ejs
@@ -29,7 +29,7 @@
                     
             </div>
         </section>
-        <section>
+        <section id="friends-list">
             <h4>friends</h4>
             <% for (u of all_users){ %>
                 <p>
