--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -13,3 +13,10 @@ body {
   padding-left: 4rem;
   margin-top: -2rem;
 }
+
+#friends-list {
+  width: 10%;
+  position: absolute;
+  right: 0px;
+  border-left: 1px solid black;
+}
