--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -10,6 +10,14 @@
     </head>
     <body>
         <%- include('_header.ejs'); %>
+        
+        <% if (flash.success && flash.success.length > 0) { %>
+        <h5>
+            <%= flash.success %>
+        </h5>
+        
+        <% } %>
+
         <main id="body-main">
         <%- body %>
         </main>
