--- a/views/home.ejs
+++ b/views/home.ejs
@@ -11,7 +11,7 @@
         <section id="posted-content">
             <div>
                 <% if (locals.user){ %>
-            <form action="/posts/create" method="post">
+            <form action="/posts/create" id="new-post-form" method="POST">
             <textarea name="content" id="" cols="30" rows="4" placeholder="Type here..."></textarea>
             <input type="submit" value="Post">
             </form>
@@ -37,6 +37,7 @@
                 </p>
             <% } %>
         </section>
+        <script src="/js/home_posts.js"></script>
         <!-- <%- include('_footer.ejs'); %>
     </body>
 </html> -->
