--- a/views/home.ejs
+++ b/views/home.ejs
@@ -19,8 +19,7 @@
             </div>
         
 
-            <div>
-                
+            <div id="post-list-container">
                 <ul>
                     <% for (post of posts) { %>
                         <%- include('_post') -%>
