--- a/views/home.ejs
+++ b/views/home.ejs
@@ -19,7 +19,7 @@
             </div>
         
 
-            <div id="post-list-container">
+            <div id="posts-list-container">
                 <ul>
                     <% for (post of posts) { %>
                         <%- include('_post') -%>
