--- a/views/home.ejs
+++ b/views/home.ejs
@@ -36,6 +36,7 @@
                 </p>
             <% } %>
         </section>
+        <script src="/js/home_posts_comments.js"></script>
         <script src="/js/home_posts.js"></script>
         <!-- <%- include('_footer.ejs'); %>
     </body>
