--- a/views/user.ejs
+++ b/views/user.ejs
@@ -11,7 +11,11 @@
 
 <section id="friends-list">
         <% if(user.id == profile_user.id) {%> 
-            <form action="/user/update/<%= profile_user.id %>" method="post">
+            <form action="/user/avatar" method="post" enctype="multipart/form-data" >
+                <input type="file" name="avatar" id="">
+            </form>
+            <form action="/user/update/<%= profile_user.id %>" enctype="multipart/form-data" method="post">
+            <input type="file" name="avatar" id="" placeholder="Profile Picture">
             <input type="text" name="name" placeholder="Enter Name" value="<%= profile_user.name %>" required>
             <input type="email" name="email" placeholder="Enter Email" value="<%= profile_user.email %>" required>
             <input type="submit" value="Update">
