--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -12,5 +12,10 @@
             <p><input type="password" name="confirm_password" id="" required placeholder="confirm password"></p>
             <button type="submit">Sign-up</button>
         </form>
+
+
+<p>
+    <a href="/user/auth/google">Google Sign-in/Sign-up</a>
+</p>
     </body>
 </html>
